flickering bugfix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 html, body {
-  background-color: white;
+  background-color: black;
+  color:white;
 }
 
 h1, h2, h3, h4, h5, h6 {
